# zksync-airbender

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
blake2s_u32/: Cargo.toml
blake2s_u32/src/: aligned_array.rs  lib.rs  state_with_extended_control.rs
circuit_defs/final_reduced_risc_v_machine/: Cargo.toml
circuit_defs/machine_without_signed_mul_div/: Cargo.toml
circuit_defs/prover_examples/: Cargo.toml
circuit_defs/risc_v_cycles/: Cargo.toml
circuit_defs/setups/: Cargo.toml
circuit_defs/trace_and_split/: Cargo.toml
cs/: Cargo.toml  add_sub_lui_auipc_mop_gkr.json  add_sub_lui_auipc_mop_preprocessed_layout.json  add_sub_lui_auipc_mop_preprocessed_layout_gkr.json  add_sub_lui_auipc_mop_preprocessed_ssa.json  add_sub_lui_auipc_mop_preprocessed_ssa_gkr.json  bigint_delegation_layout.json  bigint_delegation_ssa.json  blake_delegation_ssa.json  decoder_circuit_layout.json  full_machine_with_delegation_layout.json  full_machine_with_delegation_ssa.json  full_machine_with_delegation_without_signed_mul_div_layout.json  full_machine_with_delegation_without_signed_mul_div_ssa.json  jump_branch_slt_preprocessed_layout.json  jump_branch_slt_preprocessed_ssa.json  keccak_delegation_layout.json  minimal_machine_with_delegation_layout.json  minimal_machine_with_delegation_ssa.json  mul_div_preprocessed_layout.json  mul_div_unsigned_preprocessed_layout.json  mul_div_unsigned_preprocessed_ssa.json  reduced_machine_preprocessed_layout.json  reduced_machine_preprocessed_ssa.json  shift_binop_csrrw_preprocessed_layout.json  shift_binop_csrrw_preprocessed_ssa.json  subword_only_load_store_preprocessed_layout.json  subword_only_load_store_preprocessed_ssa.json  word_only_load_store_preprocessed_layout.json  word_only_load_store_preprocessed_ssa.json
cs/compiled_circuits/: add_sub_lui_auipc_mop_preprocessed_layout_gkr.json  add_sub_lui_auipc_mop_preprocessed_layout_no_caches_gkr.json  add_sub_lui_auipc_mop_preprocessed_ssa_gkr.json  bigint_with_extended_control_layout_gkr.json  bigint_with_extended_control_ssa_gkr.json  blake2_with_extended_control_layout_gkr.json  blake2_with_extended_control_ssa_gkr.json  jump_branch_slt_preprocessed_layout_gkr.json  jump_branch_slt_preprocessed_ssa_gkr.json  keccak_special5_layout_gkr.json  keccak_special5_ssa_gkr.json  mem_subword_only_preprocessed_layout_gkr.json  mem_subword_only_preprocessed_ssa_gkr.json  mem_word_only_preprocessed_layout_gkr.json  mem_word_only_preprocessed_ssa_gkr.json  shift_binop_preprocessed_layout_gkr.json  shift_binop_preprocessed_ssa_gkr.json
cs/src/: constraint.rs  csr_properties.rs  lib.rs  tables.rs  types.rs  utils.rs
examples/cpp/: .gitignore  CMakeLists.txt  README.md  input.txt
examples/hashed_fibonacci/: Cargo.toml  README.md  app.elf  app.text  dump_bin.sh
execution_utils/: Cargo.toml
execution_utils/src/: constants.rs  lib.rs  proofs.rs  recursion.rs  recursion_strategy.rs  unified_circuit.rs  unrolled.rs  unrolled_gpu.rs  verifiers.rs
fft/: Cargo.toml
fft/benches/: bitreverse.rs
fft/src/: lib.rs  utils.rs
field/: Cargo.toml
field/src/: arm_impl.rs  avx_512_impl.rs  base.rs  complex.rs  ext_arm_impl.rs  ext_avx_512_impl.rs  field.rs  lib.rs  proc_macro_ops.rs  quartic.rs
full_statement_verifier/: Cargo.toml
full_statement_verifier/src/: definitions.rs  imports.rs  legacy_circuits.rs  lib.rs  statement_common.rs  unified_circuit_statement.rs  unrolled_proof_statement.rs
gpu_prover/: AGENTS.md  Cargo.toml  README.md
gpu_prover/benches/: blake2s.rs  field.rs  hypercube.rs
gpu_prover/docs/: gpu_scheduling_contract.md  prove_workflow.html
gpu_prover/native/: CMakeLists.txt  blake2s.cu  context.cu  context.cuh  nvtx_registered.c  stage3.cu
gpu_prover/src/: blake2s.rs  circuit_type.rs  device_context.rs  lib.rs  machine_type.rs  tests.rs
gpu_prover_new/: AGENTS.md  Cargo.toml
gpu_prover_new/benches/: field.rs
gpu_prover_new/native/: CMakeLists.txt  common.cuh  context.cu  context.cuh  field.cuh  field_bench.cu  memory.cuh  ptx.cuh
gpu_prover_new/src/: circuit_type.rs  device_context.rs  device_structures.rs  field_bench.rs  lib.rs
gpu_prover_test/: AGENTS.md  Cargo.toml
gpu_prover_test/src/: main.rs
gpu_witness_eval_generator_new/: Cargo.toml
gpu_witness_eval_generator_new/src/: boolean.rs  field.rs  integer.rs  lib.rs
prover/: Cargo.toml  add_sub_lui_auipc_mop_gkr_circuit.json  add_sub_lui_auipc_mop_gkr_proof.json  add_sub_lui_auipc_mop_preprocessed_generated.rs  add_sub_lui_auipc_mop_preprocessed_generated_gkr.rs  add_sub_lui_auipc_mop_unrolled_proof.json  blake2s_delegation_circuit_layout.json  blake2s_delegator_proof  blake_delegation_generated.rs  delegation_proof  full_machine_with_delegation_generated.rs  inits_and_teardowns_unrolled_proof.json  jump_branch_slt_preprocessed_generated.rs  jump_branch_slt_unrolled_proof.json  minimal_machine_with_delegation_generated.rs  mul_div_unsigned_preprocessed_generated.rs  mul_div_unsigned_unrolled_proof.json  reduced_machine_preprocessed_generated.rs  shift_binop_csrrw_preprocessed_generated.rs  shift_binop_csrrw_unrolled_proof.json  subword_only_load_store_unrolled_proof.json  unified_reduced_unrolled_proof.json  unrolled_reduced_proof  word_only_load_store_unrolled_proof.json
prover/.cargo/: config.toml
prover/benches/: pow_bench.rs
prover/compiled_circuits/: add_sub_lui_auipc_mop_preprocessed_generated_gkr.rs  bigint_with_extended_control_generated_gkr.rs  blake2_with_extended_control_generated_gkr.rs  jump_branch_slt_preprocessed_generated_gkr.rs  keccak_special5_generated_gkr.rs  mem_subword_only_preprocessed_generated_gkr.rs  mem_word_only_preprocessed_generated_gkr.rs  shift_binop_preprocessed_generated_gkr.rs
prover/src/: cap_holder.rs  lib.rs  mem_utils.rs  query_utils.rs  tracer.rs  utils.rs
risc_v_simulator/: Cargo.toml
risc_v_simulator/src/: lib.rs
riscv_common/: Cargo.toml  build.rs
riscv_transpiler/: Cargo.toml
transcript/: Cargo.toml
verifier_common/: Cargo.toml
verifier_generator/: Cargo.toml  dump.sh
witness_eval_generator/: Cargo.toml
(+953 files in other folders)
