[workspace]
resolver = "2"

members = [
    "blake2s_u32",
    "common_constants",
    "field",
    "cs",
    "prover",
    "trace_holder",
    "fft",
    "worker",
    "test_utils",
    "transcript",
    "non_determinism_source",
    "verifier_common",
    "verifier_generator",
    "witness_eval_generator",
    "gpu_witness_eval_generator",
    "verifier",
    "full_statement_verifier",

    "circuit_defs/circuit_common",
    "circuit_defs/trace_and_split",
    "circuit_defs/setups",
    "circuit_defs/prover_examples",

    "execution_utils",

    "gpu_prover",
    "gpu_prover_old",
    "gpu_prover_test",

    "reduced_keccak",

    "tools/cli",
    "tools/generator",
    "tools/pow_config_generator",


    "circuit_defs/blake2_with_compression",
    "circuit_defs/bigint_with_control",
    "circuit_defs/keccak_special5",

    "circuit_defs/unrolled_circuits/add_sub_lui_auipc_mop",
    "circuit_defs/unrolled_circuits/jump_branch_slt",
    "circuit_defs/unrolled_circuits/mul_div_unsigned",
    "circuit_defs/unrolled_circuits/mul_div",
    "circuit_defs/unrolled_circuits/inits_and_teardowns",
    "circuit_defs/unrolled_circuits/load_store_word_only",
    "circuit_defs/unrolled_circuits/load_store_subword_only",
    "circuit_defs/unrolled_circuits/shift_binary_csr",
    "circuit_defs/unrolled_circuits/unified_reduced_machine",

    "riscv_transpiler",
]

default-members = [
    "blake2s_u32",
    "common_constants",
    "circuit_defs/bigint_with_control",
    "circuit_defs/blake2_with_compression",
    "circuit_defs/circuit_common",
    "circuit_defs/prover_examples",
    "circuit_defs/keccak_special5",
    "circuit_defs/setups",
    "circuit_defs/trace_and_split",
    "cs",
    "execution_utils",
    "fft",
    "field",
    # "full_statement_verifier",
    # gpu_prover is not a default member because it needs CUDA installation to compile
    "non_determinism_source",
    "prover",
    "reduced_keccak",
    "riscv_transpiler",
    # "tools/cli",
    "tools/generator",
    "trace_holder",
    "transcript",
    "verifier",
    "verifier_common",
    "verifier_generator",
    "worker",
    "witness_eval_generator",
    "gpu_witness_eval_generator",
    "circuit_defs/unrolled_circuits/add_sub_lui_auipc_mop",
    "circuit_defs/unrolled_circuits/jump_branch_slt",
    "circuit_defs/unrolled_circuits/mul_div_unsigned",
    "circuit_defs/unrolled_circuits/mul_div",
    "circuit_defs/unrolled_circuits/inits_and_teardowns",
    "circuit_defs/unrolled_circuits/load_store_word_only",
    "circuit_defs/unrolled_circuits/load_store_subword_only",
    "circuit_defs/unrolled_circuits/shift_binary_csr",
    "circuit_defs/unrolled_circuits/unified_reduced_machine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-airbender/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[workspace.dependencies]
field = { path = "./field", default-features = false }
blake2s_u32 = { path = "./blake2s_u32", default-features = false }
common_constants = { path = "./common_constants" }
riscv_common = { path = "./riscv_common", default-features = false }
trace_holder = { path = "./trace_holder" }
worker = { path = "./worker" }
test_utils = { path = "./test_utils" }
fft = { path = "./fft" }
prover = { path = "./prover", default-features = false }
cs = { path = "./cs", default-features = false }
transcript = { path = "./transcript", default-features = false }
verifier_generator = { path = "./verifier_generator" }
verifier_common = { path = "./verifier_common", default-features = false }

circuit_common = { path = "./circuit_defs/circuit_common" }

blake2_with_compression = { path = "./circuit_defs/blake2_with_compression" }
bigint_with_control = { path = "./circuit_defs/bigint_with_control" }
keccak_special5 = {path = "./circuit_defs/keccak_special5"}

add_sub_lui_auipc_mop = { path = "./circuit_defs/unrolled_circuits/add_sub_lui_auipc_mop" }
inits_and_teardowns = { path = "./circuit_defs/unrolled_circuits/inits_and_teardowns" }
jump_branch_slt = { path = "./circuit_defs/unrolled_circuits/jump_branch_slt" }
load_store_subword_only = { path = "./circuit_defs/unrolled_circuits/load_store_subword_only" }
load_store_word_only = { path = "./circuit_defs/unrolled_circuits/load_store_word_only" }
mul_div = { path = "./circuit_defs/unrolled_circuits/mul_div" }
mul_div_unsigned = { path = "./circuit_defs/unrolled_circuits/mul_div_unsigned" }
shift_binary_csr = { path = "./circuit_defs/unrolled_circuits/shift_binary_csr" }
unified_reduced_machine = { path = "./circuit_defs/unrolled_circuits/unified_reduced_machine" }

trace_and_split = { path = "./circuit_defs/trace_and_split" }
setups = { path = "./circuit_defs/setups" }

# verifier = {path = "./verifier", default-features = false}

# full_statement_verifier  = { path = "./full_statement_verifier", default-features = false }

non_determinism_source = { path = "./non_determinism_source", default-features = false }
riscv_transpiler = { path = "./riscv_transpiler", default-features = false }
execution_utils = { path = "./execution_utils", default-features = false }
witness_eval_generator = { path = "./witness_eval_generator", default-features = false }
gpu_witness_eval_generator = { path = "./gpu_witness_eval_generator", default-features = false }
gpu_prover = { path = "./gpu_prover", default-features = false }

serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
clap = { version = "4.5.21", features = ["derive"] }
addr2line_new = { package = "addr2line", version = "0.25" }
object = "0.37"
# rand = {version = "0.8", default-features = false, features = ["std_rng"] }
rand = { version = "0.9", default-features = false }
unroll = "0.1"
seq-macro = "0.3"
super-seq-macro = "0.3"
arrayvec = { version = "0.7", default-features = false }
itertools = { version = "0.14" }
inferno = "0.12"
log = "0.4"
sha3 = { version = "*", default-features = false }

[profile.dev]
debug-assertions = true
opt-level = 0
debug = true

[profile.dev.package.field]
opt-level = 2
[profile.dev.package.fft]
opt-level = 2
[profile.dev.package.worker]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
strip = true

[profile.verifier]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
strip = true
incremental = false

# Special profile for compiling the cli tool.
# that is doing some optimizations (otherwise proving is too slow)
# but doesn't do them on verifier crate (as then the compilation can take over 15 min).
[profile.cli]
inherits = "dev"
opt-level = 3
debug = false # exponential in LLVM
incremental = false

[profile.cli.package.verifier]
opt-level = 1

# Special profile for ISA tests
[profile.test-release]
inherits = "release"  # Start with the release profile as a base
opt-level = 2         # Moderate optimization (80% of opt-level 3, much faster compilation)
codegen-units = 256   # High parallelism for faster compilation (default is 16 in release)
lto = false           # Disable link-time optimization (LTO) to speed up linking
incremental = true    # Enable incremental compilation for faster rebuilds
debug = true         # Disable debug info to reduce compile time (optional, set to true if you need debugging)
# strip = "symbols"     # Strip symbols to reduce binary size and linking time
# panic = "unwind"      # Default panic strategy, no change needed (abort can be faster but less safe for tests)
rpath = false         # Disable rpath (rarely needed, speeds up linking slightly)
