[package]
name = "execution_utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
verifier_common = { workspace = true, features = ["proof_utils", "replace_csr"] }
risc_v_simulator = { workspace = true, features = ["delegation"] }
trace_and_split = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
prover_examples = { path = "../circuit_defs/prover_examples" }
bincode = { version = "1.3" }
# full_statement_verifier = { workspace = true }
# full_statement_verifier = { path = "../full_statement_verifier" }

[features]
# Will evaluate quotient on main domain for debug
debug_satisfiable = ["prover_examples/debug_satisfiable"]
# Will perform satisfiability tests on witness
precheck_satisfied = ["prover_examples/precheck_satisfied"]
extended_tests = []
# debug = ["prover_examples/precheck_satisfied", "prover_examples/debug_satisfiable"]
default = []
# default = ["extended_tests"]
