[package]
name = "execution_utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
verifier_common = { workspace = true, features = ["proof_utils", "replace_csr"] }
riscv_common = { workspace = true, default-features = false }
riscv_transpiler = { workspace = true, features = ["delegation"] }
trace_and_split = { workspace = true }
setups = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
serde_json = "*"
full_statement_verifier = { path = "../full_statement_verifier", default-features = false }
prover_examples = { path = "../circuit_defs/prover_examples", default-features = false, optional = true }

prover = { workspace = true, optional = true, features = ["prover"] }
gpu_prover = { workspace = true, optional = true }

[dev-dependencies]
test_utils = { workspace = true }
bincode = { version = "1.3" }
prover_examples = { path = "../circuit_defs/prover_examples" }
serial_test = "3"

[features]
security_80 = [
    "verifier_common/security_80",
    "full_statement_verifier/security_80",
    "prover_examples/security_80",
    "gpu_prover?/security_80",
]
security_100 = [
    "verifier_common/security_100",
    "full_statement_verifier/security_100",
    "prover_examples/security_100",
    "gpu_prover?/security_100",
]
verifier_80 = [
    "security_80",
    "full_statement_verifier/verifiers",
    "full_statement_verifier/replace_csr",
    "prover_examples/verifiers",
]
verifier_100 = [
    "security_100",
    "full_statement_verifier/verifiers",
    "full_statement_verifier/replace_csr",
    "prover_examples/verifiers",
]
prover = ["prover_examples"]
verifier_binaries = []
# Will evaluate quotient on main domain for debug
debug_satisfiable = ["prover_examples/debug_satisfiable"]
# Will perform satisfiability tests on witness
precheck_satisfied = ["prover_examples/precheck_satisfied"]
# debug = ["prover_examples/precheck_satisfied", "prover_examples/debug_satisfiable"]
default = ["verifier_80", "prover"]
# default = ["prover"]
gpu_prover = ["prover", "dep:prover", "dep:gpu_prover"]
