[package]
name = "field"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
rand = { workspace = true, default-features = false }
seq-macro = "0.3"
proc-macro2 = {version = "1", optional = true }
quote = {version = "1", optional = true }

[features]
use_division = []
proc_macro_ops = ["proc-macro2", "quote"]
default = []
modular_ops = ["use_division"]
modular_ext4_ops = ["modular_ops"]
no_inline = []
